quorum/test/tests/TypeChecker/Pass/ImpAssignNumberNumber.quorum
number n = 7.5
print n