quorum/test/tests/TypeChecker/Fail/ImpAssignIntegerNumObj.quorum
Number n
n:setValue(7.5)
integer i = n